[package]
name = "merkle-mountain-range"
version = "0.2.0"
authors = ["Darwinia Network <hello@darwinia.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = { version = "0.8.1", default-features = false }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-alpha.2", default-features = false, path = "../std" }

[features]
default = ["std"]
std = [
	"codec/std",
    "blake2/std",
    "sp-std/std",
]
